# FSDS_NOV_deepCNNClassifier

./: init_setup.sh  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
tests/unit/: test_utils.py
