[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7    

[options.extras_require]
testing =
    pytest>=7.1.3       #will help to run to unit test and run integration test
    mypy>=0.971         #will help to check weather a typing error or not 
    flake8>=5.0.4       #will indentify extra space in code and will help us to remove it
    tox>=3.25.1         #will create different working env and it will test in it
    black>=22.8.0       #will be used to formating the pytho code i crt stucture

[options.package_data]
deepClassifier = py.typed   #will help to ignore the py typed error in packaged eg: sckrit
  
[flake8]
max-line-length = 160
exclude = __init__.py
